fix: server cors

--- a/server/.env.development.local
+++ b/server/.env.development.local
@@ -1,5 +1,5 @@
 # PORT
-PORT = 3000
+PORT = 8080
 
 # TOKEN
 SECRET_KEY = secretKey
@@ -9,7 +9,7 @@ LOG_FORMAT = dev
 LOG_DIR = ../logs
 
 # CORS
-ORIGIN = *
+ORIGIN = http://localhost:3000
 CREDENTIALS = true
 
 NODE_ENV = development
