--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
   "main": "dist/server.js",
   "scripts": {
     "start": "npm run build && cross-env NODE_ENV=production node dist/server.js",
-    "dev": "concurrently --kill-others \"tsc --watch\" \"nodemon ./dist/server.js \"",
+    "dev": "concurrently --kill-others \"tsc --watch\" \"nodemon ./dist/server.js\"   \"cd .. && cd client && yarn dev\"",
     "build": "swc src -d dist --source-maps --copy-files",
     "build:tsc": "tsc && tsc-alias",
     "test": "jest --forceExit --detectOpenHandles",
@@ -17,8 +17,13 @@
     "deploy:dev": "pm2 start ecosystem.config.js --only dev"
   },
   "dependencies": {
+    "@babel/cli": "^7.19.3",
+    "@babel/core": "^7.20.5",
+    "@babel/preset-env": "^7.20.2",
+    "@types/validator": "^13.7.10",
     "bcrypt": "^5.0.1",
-    "class-transformer": "^0.5.1",
+    "body-parser": "^1.20.1",
+    "class-transformer": "^0.3.2",
     "class-validator": "^0.13.2",
     "class-validator-jsonschema": "^3.1.1",
     "compression": "^1.7.4",
@@ -29,11 +34,16 @@
     "express": "^4.18.1",
     "helmet": "^5.1.1",
     "hpp": "^0.2.3",
+    "i": "^0.3.7",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
+    "mysql2": "^2.3.3",
+    "npm": "^9.2.0",
     "reflect-metadata": "^0.1.13",
     "routing-controllers": "^0.9.0",
     "routing-controllers-openapi": "^3.1.0",
+    "sequelize": "^6.26.0",
+    "sequelize-typescript": "^2.1.5",
     "swagger-ui-express": "^4.5.0",
     "winston": "^3.8.1",
     "winston-daily-rotate-file": "^4.7.1"
@@ -50,7 +60,7 @@
     "@types/jest": "^28.1.6",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/morgan": "^1.9.3",
-    "@types/node": "^17.0.45",
+    "@types/node": "^18.11.11",
     "@types/supertest": "^2.0.12",
     "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^5.29.0",
